--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -25,15 +25,27 @@
    "outputs": [],
    "source": [
     "def get_data(batch_size: int):\n",
-    "    transform = v2.Compose([\n",
+    "    train_transform = v2.Compose([\n",
+    "        v2.RandomCrop(32, padding = 4),\n",
+    "        v2.RandomHorizontalFlip(),\n",
+    "        # v2.RandomRotation(5),\n",
     "        v2.ToImage(), \n",
     "        v2.ToDtype(torch.float32, scale=True),\n",
-    "        v2.RandomHorizontalFlip(),\n",
-    "        v2.RandomCrop(32, padding = 4),\n",
-    "        # v2.RandomRotation(5),\n",
+    "        v2.Normalize(\n",
+    "            mean=(0.4914, 0.4822, 0.4465),\n",
+    "            std=(0.2470, 0.2435, 0.2616),\n",
+    "        ),\n",
     "    ])\n",
-    "    train_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=True, transform=transform, download=True)\n",
-    "    test_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=False, transform=transform, download=True)\n",
+    "    test_transform = v2.Compose([\n",
+    "        v2.ToImage(),\n",
+    "        v2.ToDtype(torch.float32, scale=True),\n",
+    "        v2.Normalize(\n",
+    "            mean=(0.4914, 0.4822, 0.4465),\n",
+    "            std=(0.2470, 0.2435, 0.2616),\n",
+    "        ),\n",
+    "    ])\n",
+    "    train_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=True, transform=train_transform, download=True)\n",
+    "    test_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=False, transform=test_transform, download=True)\n",
     "\n",
     "    train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True)\n",
     "    test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=False)\n",
