Print epoch data

--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -67,11 +67,13 @@
     "\n",
     "def train(model, criterion, optimizer, scheduler, train_loader, num_epochs: int, plot_live=True):\n",
     "    model.train()  # Ensure model is in training mode\n",
+    "    import time\n",
     "    \n",
     "    losses = []\n",
     "    steps = []\n",
     "    step_count = 0\n",
     "    \n",
+    "    start_time = time.time()\n",
     "    for epoch in range(num_epochs):\n",
     "        for step, batch in enumerate(train_loader, start=1):\n",
     "            loss = train_step(model, criterion, optimizer, batch)\n",
@@ -79,6 +81,9 @@
     "            losses.append(loss)\n",
     "            steps.append(step_count)\n",
     "        scheduler.step()\n",
+    "        duration = time.time() - start_time\n",
+    "        if epoch % 4 == 0 or num_epochs == epoch - 1:\n",
+    "            print(f\"Epoch {epoch} loss: {losses[-1]:.4f}, duration: {duration:.2f}s\")\n",
     "\n",
     "    return losses, steps\n",
     "            \n",
