--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "94a39d34-1234-4230-8c25-bed4cd57d602",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
     "            nn.BatchNorm2d(64),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Dropout(p=0.2),\n",
+    "            nn.Dropout(p=0.1),\n",
     "        )\n",
     "        # B, 3, 32, 32 -> B, 64, 16, 16\n",
     "        self.layer2 = nn.Sequential(\n",
@@ -205,7 +205,7 @@
     "            nn.BatchNorm2d(128),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Dropout(p=0.2),\n",
+    "            nn.Dropout(p=0.1),\n",
     "        )\n",
     "        # B, 64, 16, 16 -> B, 128, 8, 8\n",
     "        self.layer3 = nn.Sequential(\n",
@@ -213,7 +213,7 @@
     "            nn.BatchNorm2d(256),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Dropout(p=0.2),\n",
+    "            nn.Dropout(p=0.1),\n",
     "        )\n",
     "        # B, 128, 8, 8 -> B, 256, 4, 4  \n",
     "\n",
@@ -269,8 +269,8 @@
     "model.train()  # Ensure model is in training mode\n",
     "train_loader, test_loader = get_data(100)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-3, weight_decay=1e-4)\n",
-    "scheduler = CosineAnnealingLR(optimizer, T_max=num_epochs)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=5e-3, weight_decay=1e-4)\n",
+    "scheduler = CosineAnnealingLR(optimizer, T_max=num_epochs, eta_min=1e-5)\n",
     "\n",
     "# Diagnostic: Check initial model outputs before training\n",
     "# Expected: Loss should be around 2.3 (which is -log(1/10) for random 10-class prediction)\n",
