Remove dropout layers and add random erasing augmentation in CIFAR-10 model

--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "e1b270d8-21de-4bd4-9660-ef446bf692b5",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,7 @@
     "            mean=(0.4914, 0.4822, 0.4465),\n",
     "            std=(0.2470, 0.2435, 0.2616),\n",
     "        ),\n",
+    "        v2.RandomErasing(p=0.5, scale=(0.02, 0.15), ratio=(0.3, 3.3)),\n",
     "    ])\n",
     "    test_transform = v2.Compose([\n",
     "        v2.ToImage(),\n",
@@ -197,7 +198,7 @@
     "            nn.BatchNorm2d(64),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Dropout(p=0.1),\n",
+    "            # nn.Dropout(p=0.1),\n",
     "        )\n",
     "        # B, 3, 32, 32 -> B, 64, 16, 16\n",
     "        self.layer2 = nn.Sequential(\n",
@@ -205,7 +206,7 @@
     "            nn.BatchNorm2d(128),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Dropout(p=0.1),\n",
+    "            # nn.Dropout(p=0.1),\n",
     "        )\n",
     "        # B, 64, 16, 16 -> B, 128, 8, 8\n",
     "        self.layer3 = nn.Sequential(\n",
@@ -213,7 +214,7 @@
     "            nn.BatchNorm2d(256),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Dropout(p=0.1),\n",
+    "            # nn.Dropout(p=0.1),\n",
     "        )\n",
     "        # B, 128, 8, 8 -> B, 256, 4, 4  \n",
     "\n",
