Update optimizer and scheduler settings in CIFAR-10 model training

--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -270,8 +270,8 @@
     "model.train()  # Ensure model is in training mode\n",
     "train_loader, test_loader = get_data(100)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=5e-3, weight_decay=1e-4)\n",
-    "scheduler = CosineAnnealingLR(optimizer, T_max=num_epochs, eta_min=1e-5)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.1,  momentum=0.9, weight_decay=4e-4)\n",
+    "scheduler = CosineAnnealingLR(optimizer, T_max=num_epochs, eta_min=1e-4)\n",
     "\n",
     "# Diagnostic: Check initial model outputs before training\n",
     "# Expected: Loss should be around 2.3 (which is -log(1/10) for random 10-class prediction)\n",
