--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -197,6 +197,9 @@
     "            nn.Conv2d(3, 64, kernel_size=3, stride=1, padding=1),\n",
     "            nn.BatchNorm2d(64),\n",
     "            nn.ReLU(),\n",
+    "            nn.Conv2d(64, 64, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
     "            # nn.Dropout(p=0.1),\n",
     "        )\n",
