Enhance training step to return accuracy metrics and adjust logging for improved feedback during CIFAR-10 model training

--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -28,7 +28,7 @@
     "    train_transform = v2.Compose([\n",
     "        v2.RandomCrop(32, padding = 4),\n",
     "        v2.RandomHorizontalFlip(),\n",
-    "        # v2.RandomRotation(5),\n",
+    "        v2.RandomRotation(5),\n",
     "        v2.ToImage(), \n",
     "        v2.ToDtype(torch.float32, scale=True),\n",
     "        v2.Normalize(\n",
@@ -57,13 +57,17 @@
     "    images = images.to(DEVICE)\n",
     "    labels = labels.to(DEVICE)\n",
     "\n",
+    "\n",
     "    preds = model(images)\n",
     "    loss = criterion(preds, labels)\n",
+    "\n",
+    "    correct = (preds.argmax(dim=1) == labels).sum().item()\n",
+    "    total = labels.size(0)\n",
     "\n",
     "    optimizer.zero_grad()\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
-    "    return loss.item()\n",
+    "    return loss.item(), correct, total\n",
     "\n",
     "\n",
     "def train(model, criterion, optimizer, scheduler, train_loader, num_epochs: int, plot_live=True):\n",
@@ -74,21 +78,28 @@
     "    steps = []\n",
     "    step_count = 0\n",
     "    \n",
-    "    start_time = time.time()\n",
+    "    train_start_time = time.time()\n",
     "    for epoch in range(num_epochs):\n",
+    "        start_time = time.time()\n",
+    "        correct = 0\n",
+    "        total = 0\n",
     "        for step, batch in enumerate(train_loader, start=1):\n",
-    "            loss = train_step(model, criterion, optimizer, batch)\n",
+    "            loss, _correct, _total = train_step(model, criterion, optimizer, batch)\n",
     "            step_count += 1\n",
     "            losses.append(loss)\n",
     "            steps.append(step_count)\n",
+    "            correct += _correct\n",
+    "            total += _total\n",
     "        scheduler.step()\n",
     "        duration = time.time() - start_time\n",
-    "        if epoch % 4 == 0 or num_epochs == epoch - 1:\n",
-    "            print(f\"Epoch {epoch} loss: {losses[-1]:.4f}, duration: {duration:.2f}s\")\n",
+    "        accuracy = 100 * correct / total\n",
+    "        if epoch % 2 == 0 or num_epochs == epoch - 1:\n",
+    "            print(f\"Epoch {epoch} loss: {losses[-1]:.4f}, duration: {duration:.2f}s, accuracy: {accuracy:.2f}%\")\n",
     "\n",
+    "    train_duration = time.time() - train_start_time\n",
+    "    print(f\"Training duration: {train_duration:.2f}s\")\n",
     "    return losses, steps\n",
     "            \n",
-    "\n",
     "\n",
     "@torch.no_grad()\n",
     "def evaluate(model, test_loader):\n",
