--- a/cifar_10_conv_net.ipynb
+++ b/cifar_10_conv_net.ipynb
@@ -283,7 +283,7 @@
     "\n",
     "model.train()  # Ensure model is in training mode\n",
     "train_loader, test_loader = get_data(100)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.CrossEntropyLoss(label_smoothing=0.05)\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=0.1,  momentum=0.9, weight_decay=4e-4)\n",
     "scheduler = CosineAnnealingLR(optimizer, T_max=num_epochs, eta_min=1e-4)\n",
     "\n",
