Refactor ResNet architecture in CIFAR-10 model by replacing individual layers with sequential blocks for improved readability and structure

--- a/cifar_10_res_net.ipynb
+++ b/cifar_10_res_net.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "94a39d34-1234-4230-8c25-bed4cd57d602",
    "metadata": {},
    "outputs": [],
@@ -235,12 +235,23 @@
     "    def __init__(self, num_classes):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.layer1 = ResidualBlock(in_channels=3, out_channels=64, stride=2)\n",
+    "        self.layer1 = nn.Sequential(\n",
+    "            ResidualBlock(in_channels=3, out_channels=64, stride=1),\n",
+    "            ResidualBlock(in_channels=64, out_channels=64, stride=1),\n",
+    "            ResidualBlock(in_channels=64, out_channels=64, stride=1)\n",
+    "        )\n",
+    "\n",
+    "        self.layer2 = nn.Sequential(\n",
+    "            ResidualBlock(in_channels=64, out_channels=128, stride=2),\n",
+    "            ResidualBlock(in_channels=128, out_channels=128, stride=1),\n",
+    "            ResidualBlock(in_channels=128, out_channels=128, stride=1)\n",
     "        # B, 3, 32, 32 -> B, 64, 16, 16\n",
     "        \n",
-    "        self.layer2 = ResidualBlock(in_channels=64, out_channels=128, stride=2)\n",
-    "        # B, 64, 16, 16 -> B, 128, 8, 8\n",
-    "        self.layer3 = ResidualBlock(in_channels=128, out_channels=256, stride=2)\n",
+    "        self.layer3 = nn.Sequential(\n",
+    "            ResidualBlock(in_channels=128, out_channels=256, stride=2),\n",
+    "            ResidualBlock(in_channels=256, out_channels=256, stride=1),\n",
+    "            ResidualBlock(in_channels=256, out_channels=256, stride=1)\n",
+    "        )\n",
     "        \n",
     "        # B, 128, 8, 8 -> B, 256, 4, 4  \n",
     "\n",
@@ -255,7 +266,7 @@
     "        out = self.gap(out)\n",
     "        out = out.reshape(out.size(0), -1)\n",
     "        out = self.fc(out)\n",
-    "        return out"
+    "        return out\n"
    ]
   },
   {
