--- a/cifar_10_res_net_pre_activation.ipynb
+++ b/cifar_10_res_net_pre_activation.ipynb
@@ -230,11 +230,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class PreActResidualBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels, stride=1):\n",
+    "        super().__init__()\n",
+    "        self.bn1 = nn.BatchNorm2d(in_channels)\n",
+    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=stride, padding=1, bias=False)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
+    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "\n",
+    "        self.shortcut = nn.Sequential()\n",
+    "        if stride != 1 or in_channels != out_channels:\n",
+    "            self.shortcut = nn.Sequential(\n",
+    "                nn.Conv2d(in_channels, out_channels, kernel_size=1, stride=stride, padding=0, bias=False),\n",
+    "            )\n",
+    "\n",
+    "        # Dimensionality\n",
+    "        # [B, I, H, W] -- BatchNorm\n",
+    "        # [B, I, H, W] -- Relu\n",
+    "        # [B, O, H/2, W/2] -- Conv\n",
+    "        # [B, O, H/2, W/2] -- BatchNorm\n",
+    "        # [B, O, H/2, W/2] -- Relu\n",
+    "        # [B, O, H/2, W/2] -- Conv\n",
+    "        # [B, O, H/2, W/2] -- Shortcut\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.bn1(x)\n",
+    "        out = self.relu(out)\n",
+    "        identity = out\n",
+    "\n",
+    "        out = self.conv1(x)\n",
+    "        out = self.bn2(out)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.conv2(out)\n",
+    "        \n",
+    "        out += self.shortcut(identity)\n",
+    "        return out\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "class ResNet(nn.Module):\n",
+    "    def __init__(self, num_classes):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        init_conv_channels = 32\n",
+    "        \n",
+    "        self.layer1 = nn.Sequential(\n",
+    "            ResidualBlock(in_channels=3, out_channels=init_conv_channels, stride=1),\n",
+    "            ResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1),\n",
+    "            ResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1)\n",
+    "        )\n",
+    "\n",
+    "        self.layer2 = nn.Sequential(\n",
+    "            ResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels * 2, stride=2),\n",
+    "            ResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1),\n",
+    "            ResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1)\n",
+    "        )\n",
+    "        # B, 3, 32, 32 -> B, 64, 16, 16\n",
+    "        \n",
+    "        self.layer3 = nn.Sequential(\n",
+    "            ResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 4, stride=2),\n",
+    "            ResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1),\n",
+    "            ResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1)\n",
+    "        )\n",
+    "        \n",
+    "        # B, 64, 16, 16 -> B, 128, 8, 8  \n",
+    "\n",
+    "        self.gap = nn.AdaptiveAvgPool2d(1)\n",
+    "\n",
+    "        self.fc = nn.Linear(init_conv_channels * 4, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.layer1(x)\n",
+    "        out = self.layer2(out)\n",
+    "        out = self.layer3(out)\n",
+    "        out = self.gap(out)\n",
+    "        out = out.reshape(out.size(0), -1)\n",
+    "        out = self.fc(out)\n",
+    "        return out\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be7e949d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class ResidualBlock(nn.Module):\n",
     "    def __init__(self, in_channels, out_channels, stride=1):\n",
     "        super().__init__()\n",
+    "        self.bn1 = nn.BatchNorm2d(in_channels)\n",
     "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=stride, padding=1, bias=False)\n",
-    "        self.bn1 = nn.BatchNorm2d(out_channels)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
     "\n",
     "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
@@ -247,16 +335,24 @@
     "                nn.BatchNorm2d(out_channels)\n",
     "            )\n",
     "\n",
+    "        # Dimensionality\n",
+    "        # [B, I, H, W] -- BatchNorm\n",
+    "        # [B, I, H, W] -- Relu\n",
+    "        # [B, O, H/2, W/2] -- Conv\n",
+    "        # [B, O, H/2, W/2] -- BatchNorm\n",
+    "        # [B, O, H/2, W/2] -- Relu\n",
+    "        # \n",
+    "\n",
     "    def forward(self, x):\n",
     "        identity = x\n",
+    "        out = self.bn1(x)\n",
+    "        out = self.relu(out)\n",
     "        out = self.conv1(x)\n",
-    "        out = self.bn1(out)\n",
+    "        out = self.bn2(out)\n",
     "        out = self.relu(out)\n",
     "        out = self.conv2(out)\n",
-    "        out = self.bn2(out)\n",
     "        \n",
     "        out += self.shortcut(identity)\n",
-    "        out = self.relu(out)\n",
     "        return out\n",
     "        \n",
     "        \n",
