--- a/cifar_10_res_net_pre_activation.ipynb
+++ b/cifar_10_res_net_pre_activation.ipynb
@@ -277,22 +277,22 @@
     "        init_conv_channels = 32\n",
     "        \n",
     "        self.layer1 = nn.Sequential(\n",
-    "            ResidualBlock(in_channels=3, out_channels=init_conv_channels, stride=1),\n",
-    "            ResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1),\n",
-    "            ResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1)\n",
+    "            PreActResidualBlock(in_channels=3, out_channels=init_conv_channels, stride=1),\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1),\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1)\n",
     "        )\n",
     "\n",
     "        self.layer2 = nn.Sequential(\n",
-    "            ResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels * 2, stride=2),\n",
-    "            ResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1),\n",
-    "            ResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1)\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels * 2, stride=2),\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1),\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1)\n",
     "        )\n",
     "        # B, 3, 32, 32 -> B, 64, 16, 16\n",
     "        \n",
     "        self.layer3 = nn.Sequential(\n",
-    "            ResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 4, stride=2),\n",
-    "            ResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1),\n",
-    "            ResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1)\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 4, stride=2),\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1),\n",
+    "            PreActResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1)\n",
     "        )\n",
     "        \n",
     "        # B, 64, 16, 16 -> B, 128, 8, 8  \n",
