--- a/cifar_10_res_net.ipynb
+++ b/cifar_10_res_net.ipynb
@@ -14,6 +14,7 @@
     "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
     "import matplotlib\n",
     "from collections import defaultdict\n",
+    "from update_ratio_tracker import UpdateRatioTracker\n",
     "\n",
     "\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.mps.is_available() else \"cpu\")"
@@ -194,31 +195,6 @@
     "    print(f\"  Min loss: {min(losses):.4f}\")\n",
     "    print(f\"  Max loss: {max(losses):.4f}\")\n",
     "    print(f\"  Average loss: {np.mean(losses):.4f}\")\n",
-    "\n",
-    "\n",
-    "class UpdateRatioTracker:\n",
-    "    def __init__(self, log_every=20):\n",
-    "        self.total_updates = 0\n",
-    "        self.log_every = log_every\n",
-    "        self.step = 0\n",
-    "        self.history = defaultdict(list)\n",
-    "\n",
-    "\n",
-    "    @torch.no_grad()\n",
-    "    def record(self, model, optimizer):\n",
-    "        if self.step % self.log_every != 0:\n",
-    "            return\n",
-    "\n",
-    "        self.step += 1\n",
-    "        for name, p in model.named_parameters():\n",
-    "            if p.grad is None:\n",
-    "                pass\n",
-    "            g_norm = p.grad.norm().item()\n",
-    "            w_norm = p.data.norm().item()\n",
-    "            lr = optimizer.param_groups[0]['lr']\n",
-    "            ratio = (g_norm / (w_norm + 1e-12) * lr)\n",
-    "            \n",
-    "            self.history[name].append(ratio)\n",
     "\n",
     "            \n"
    ]
