--- a/cifar_10_res_net.ipynb
+++ b/cifar_10_res_net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "aba5f50f-c3c1-4dfa-bc53-8fb4cd2c7118",
    "metadata": {},
    "outputs": [],
@@ -43,15 +43,15 @@
     "    test_transform = v2.Compose([\n",
     "        v2.ToImage(),\n",
     "        v2.ToDtype(torch.float32, scale=True),\n",
-    "        v2.Normalize(\n",
-    "            mean=(0.4914, 0.4822, 0.4465),\n",
-    "            std=(0.2470, 0.2435, 0.2616),\n",
-    "        ),\n",
+    "        # v2.Normalize(\n",
+    "        #     mean=(0.4914, 0.4822, 0.4465),\n",
+    "        #     std=(0.2470, 0.2435, 0.2616),\n",
+    "        # ),\n",
     "    ])\n",
     "    train_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=True, transform=train_transform, download=True)\n",
-    "    test_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=False, transform=test_transform, download=True)\n",
-    "\n",
     "    train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True, num_workers=8, pin_memory=True, persistent_workers=True, prefetch_factor=8)\n",
+    "\n",
+    "    test_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=False, transform=test_transform, download=True)\n",
     "    test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=False, num_workers=8, pin_memory=True, persistent_workers=True, prefetch_factor=8)\n",
     "    return train_loader, test_loader \n",
     "\n",
@@ -111,6 +111,7 @@
     "    model.eval()\n",
     "    correct = 0\n",
     "    total = 0\n",
+    "    count_incorrect_per_class = [0] * 10\n",
     "    for images, labels in test_loader:\n",
     "        images = images.to(DEVICE)\n",
     "        labels = labels.to(DEVICE)\n",
@@ -118,8 +119,15 @@
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        for i in range(len(predicted)):\n",
+    "            if predicted[i] != labels[i]:\n",
+    "                count_incorrect_per_class[labels[i]] += 1\n",
+    "\n",
     "    accuracy = 100 * correct / total\n",
     "    print(f\"Accuracy of the network on the 10000 test images: {accuracy:.2f} %\")\n",
+    "    for i in range(10):\n",
+    "        print(f\"Class wise inaccuracy for class {i}: {100 * (total - count_incorrect_per_class[i]) / total:.2f} %\")\n",
     "    return accuracy\n",
     "\n",
     "def check_model_outputs(model, train_loader, criterion):\n",
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "94a39d34-1234-4230-8c25-bed4cd57d602",
    "metadata": {},
    "outputs": [],
@@ -280,10 +288,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fac3b80e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model size: 1.08M\n",
+      "=== Checking initial model state ===\n",
+      "Initial loss: 2.3031\n",
+      "Average max probability: 0.1092\n",
+      "Predicted classes (first 10): [4, 6, 6, 6, 6, 6, 6, 6, 6, 6]\n",
+      "True classes (first 10): [8, 0, 3, 1, 2, 8, 0, 7, 6, 6]\n",
+      "Logits range: [-0.18, 0.15]\n",
+      "Logits mean: 0.01, std: 0.07\n",
+      "\n",
+      "Expected initial loss: ~2.3 (random guessing)\n",
+      "If loss is much lower, the model may have been trained before or BatchNorm stats are stale.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model = ResNet(10)\n",
     "model = model.to(DEVICE)\n",
@@ -365,17 +392,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1d74facd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the 10000 test images: 10.99 %\n",
+      "Current learning rate: 0.1\n"
+     ]
+    }
+   ],
    "source": [
     "evaluate(model, test_loader)\n",
     "\n",
     "# print optimizer current lr\n",
     "print(f\"Current learning rate: {optimizer.param_groups[0]['lr']}\")\n",
     "\n",
-    "losses[0:10]"
+    "# losses[0:10]"
    ]
   },
   {
@@ -456,6 +492,68 @@
     "ratios = grad_over_weight(model)\n",
     "print(\"Smallest grad/weight ratios:\", ratios[:10])\n",
     "print(\"Largest grad/weight ratios:\", ratios[-10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8178d486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the 10000 test images: 10.99 %\n",
+      "Class wise accuracy for class 0: 90.00 %\n",
+      "Class wise accuracy for class 1: 90.00 %\n",
+      "Class wise accuracy for class 2: 90.00 %\n",
+      "Class wise accuracy for class 3: 90.01 %\n",
+      "Class wise accuracy for class 4: 93.44 %\n",
+      "Class wise accuracy for class 5: 90.00 %\n",
+      "Class wise accuracy for class 6: 97.54 %\n",
+      "Class wise accuracy for class 7: 90.00 %\n",
+      "Class wise accuracy for class 8: 90.00 %\n",
+      "Class wise accuracy for class 9: 90.00 %\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10.99"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@torch.no_grad()\n",
+    "def evaluate(model, test_loader):\n",
+    "    model.eval()\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    count_incorrect_per_class = [0] * 10\n",
+    "    for images, labels in test_loader:\n",
+    "        images = images.to(DEVICE)\n",
+    "        labels = labels.to(DEVICE)\n",
+    "        outputs = model(images)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        for i in range(len(predicted)):\n",
+    "            if predicted[i] != labels[i]:\n",
+    "                count_incorrect_per_class[labels[i]] += 1\n",
+    "\n",
+    "    accuracy = 100 * correct / total\n",
+    "    print(f\"Accuracy of the network on the 10000 test images: {accuracy:.2f} %\")\n",
+    "    for i in range(10):\n",
+    "        print(f\"Class wise inaccuracy for class {i}: {100 * (total - count_incorrect_per_class[i]) / total:.2f} %\")\n",
+    "    return accuracy\n",
+    "\n",
+    "evaluate(model, test_loader)"
    ]
   }
  ],
