Add accuracy per class

--- a/cifar_10_res_net_pre_activation.ipynb
+++ b/cifar_10_res_net_pre_activation.ipynb
@@ -111,7 +111,7 @@
     "    model.eval()\n",
     "    correct = 0\n",
     "    total = 0\n",
-    "    count_incorrect_per_class = [0] * 10\n",
+    "    count_correct_per_class = [0] * 10\n",
     "    for images, labels in test_loader:\n",
     "        images = images.to(DEVICE)\n",
     "        labels = labels.to(DEVICE)\n",
@@ -121,13 +121,13 @@
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
     "        for i in range(len(predicted)):\n",
-    "            if predicted[i] != labels[i]:\n",
-    "                count_incorrect_per_class[labels[i]] += 1\n",
+    "            if predicted[i] == labels[i]:\n",
+    "                count_correct_per_class[labels[i]] += 1\n",
     "\n",
     "    accuracy = 100 * correct / total\n",
     "    print(f\"Accuracy of the network on the 10000 test images: {accuracy:.2f} %\")\n",
     "    for i in range(10):\n",
-    "        print(f\"Class wise inaccuracy for class {i}: {100 * (total - count_incorrect_per_class[i]) / total:.2f} %\")\n",
+    "        print(f\"Class wise accuracy for class {i}: {100 * count_correct_per_class[i] / (total / 10):.2f} %\")\n",
     "    return accuracy\n",
     "\n",
     "def check_model_outputs(model, train_loader, criterion):\n",
