Extract all common functions

--- a/cifar_10_res_net_pre_activation.ipynb
+++ b/cifar_10_res_net_pre_activation.ipynb
@@ -15,9 +15,15 @@
     "import matplotlib\n",
     "from collections import defaultdict\n",
     "from update_ratio_tracker import UpdateRatioTracker\n",
-    "\n",
-    "\n",
-    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.mps.is_available() else \"cpu\")"
+    "from cifar_common import (\n",
+    "    DEVICE,\n",
+    "    get_data,\n",
+    "    train_step,\n",
+    "    train,\n",
+    "    evaluate,\n",
+    "    check_model_outputs,\n",
+    "    plot_loss\n",
+    ")"
    ]
   },
   {
@@ -27,184 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(batch_size: int):\n",
-    "    train_transform = v2.Compose([\n",
-    "        v2.RandomCrop(32, padding = 4),\n",
-    "        v2.RandomHorizontalFlip(),\n",
-    "        v2.RandomRotation(5),\n",
-    "        v2.ToImage(), \n",
-    "        v2.ToDtype(torch.float32, scale=True),\n",
-    "        v2.Normalize(\n",
-    "            mean=(0.4914, 0.4822, 0.4465),\n",
-    "            std=(0.2470, 0.2435, 0.2616),\n",
-    "        ),\n",
-    "        v2.RandomErasing(p=0.5, scale=(0.02, 0.15), ratio=(0.3, 3.3)),\n",
-    "    ])\n",
-    "    test_transform = v2.Compose([\n",
-    "        v2.ToImage(),\n",
-    "        v2.ToDtype(torch.float32, scale=True),\n",
-    "        v2.Normalize(\n",
-    "            mean=(0.4914, 0.4822, 0.4465),\n",
-    "            std=(0.2470, 0.2435, 0.2616),\n",
-    "        ),\n",
-    "    ])\n",
-    "    train_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=True, transform=train_transform, download=True)\n",
-    "    test_dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=False, transform=test_transform, download=True)\n",
-    "\n",
-    "    train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True, num_workers=8, pin_memory=True, persistent_workers=True, prefetch_factor=8)\n",
-    "    test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=False, num_workers=8, pin_memory=True, persistent_workers=True, prefetch_factor=8)\n",
-    "    return train_loader, test_loader \n",
-    "\n",
-    "def train_step(model, criterion, optimizer, batch):\n",
-    "    images, labels = batch\n",
-    "    images = images.to(DEVICE)\n",
-    "    labels = labels.to(DEVICE)\n",
-    "\n",
-    "\n",
-    "    preds = model(images)\n",
-    "    loss = criterion(preds, labels)\n",
-    "\n",
-    "    correct = (preds.argmax(dim=1) == labels).sum().item()\n",
-    "    total = labels.size(0)\n",
-    "\n",
-    "    optimizer.zero_grad()\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "    return loss.item(), correct, total\n",
-    "\n",
-    "\n",
-    "def train(model, criterion, optimizer, scheduler, train_loader, num_epochs: int, tracker):\n",
-    "    model.train()  # Ensure model is in training mode\n",
-    "    import time\n",
-    "    \n",
-    "    losses = []\n",
-    "    steps = []\n",
-    "    step_count = 0\n",
-    "    \n",
-    "    train_start_time = time.time()\n",
-    "    for epoch in range(num_epochs):\n",
-    "        start_time = time.time()\n",
-    "        correct = 0\n",
-    "        total = 0\n",
-    "        for step, batch in enumerate(train_loader, start=1):\n",
-    "            loss, _correct, _total = train_step(model, criterion, optimizer, batch)\n",
-    "            step_count += 1\n",
-    "            losses.append(loss)\n",
-    "            steps.append(step_count)\n",
-    "            correct += _correct\n",
-    "            total += _total\n",
-    "            tracker.record(model, optimizer)\n",
-    "\n",
-    "        scheduler.step()\n",
-    "        duration = time.time() - start_time\n",
-    "        accuracy = 100 * correct / total\n",
-    "        if epoch % 2 == 0 or num_epochs == epoch - 1:\n",
-    "            print(f\"Epoch {epoch} loss: {losses[-1]:.4f}, duration: {duration:.2f}s, accuracy: {accuracy:.2f}%\")\n",
-    "\n",
-    "    train_duration = time.time() - train_start_time\n",
-    "    print(f\"Training duration: {train_duration:.2f}s\")\n",
-    "    return losses, steps\n",
-    "            \n",
-    "\n",
-    "@torch.no_grad()\n",
-    "def evaluate(model, test_loader):\n",
-    "    model.eval()\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    count_correct_per_class = [0] * 10\n",
-    "    for images, labels in test_loader:\n",
-    "        images = images.to(DEVICE)\n",
-    "        labels = labels.to(DEVICE)\n",
-    "        outputs = model(images)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
-    "\n",
-    "        for i in range(len(predicted)):\n",
-    "            if predicted[i] == labels[i]:\n",
-    "                count_correct_per_class[labels[i]] += 1\n",
-    "\n",
-    "    accuracy = 100 * correct / total\n",
-    "    print(f\"Accuracy of the network on the 10000 test images: {accuracy:.2f} %\")\n",
-    "    for i in range(10):\n",
-    "        print(f\"Class wise accuracy for class {i}: {100 * count_correct_per_class[i] / (total / 10):.2f} %\")\n",
-    "    return accuracy\n",
-    "\n",
-    "def check_model_outputs(model, train_loader, criterion):\n",
-    "    \"\"\"Check initial model outputs to diagnose low loss issue\"\"\"\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        images, labels = next(iter(train_loader))\n",
-    "        images = images.to(DEVICE)\n",
-    "        labels = labels.to(DEVICE)\n",
-    "        \n",
-    "        preds = model(images)\n",
-    "        loss = criterion(preds, labels)\n",
-    "        \n",
-    "        # Get probabilities\n",
-    "        probs = torch.softmax(preds, dim=1)\n",
-    "        max_probs, predicted = torch.max(probs, dim=1)\n",
-    "        \n",
-    "        print(f\"Initial loss: {loss.item():.4f}\")\n",
-    "        print(f\"Average max probability: {max_probs.mean().item():.4f}\")\n",
-    "        print(f\"Predicted classes (first 10): {predicted[:10].cpu().tolist()}\")\n",
-    "        print(f\"True classes (first 10): {labels[:10].cpu().tolist()}\")\n",
-    "        print(f\"Logits range: [{preds.min().item():.2f}, {preds.max().item():.2f}]\")\n",
-    "        print(f\"Logits mean: {preds.mean().item():.2f}, std: {preds.std().item():.2f}\")\n",
-    "        \n",
-    "    model.train()\n",
-    "\n",
-    "def plot_loss(losses, steps, window_size=100):\n",
-    "    \"\"\"Plot training loss with optional moving average\"\"\"\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    import numpy as np\n",
-    "    \n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    \n",
-    "    # Plot raw losses (can be noisy)\n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    plt.plot(steps, losses, alpha=0.3, color='blue', label='Raw loss')\n",
-    "    \n",
-    "    # Calculate moving average if we have enough points\n",
-    "    if len(losses) >= window_size:\n",
-    "        moving_avg = np.convolve(losses, np.ones(window_size)/window_size, mode='valid')\n",
-    "        moving_avg_steps = steps[window_size-1:]\n",
-    "        plt.plot(moving_avg_steps, moving_avg, color='red', linewidth=2, label=f'Moving avg ({window_size} steps)')\n",
-    "    \n",
-    "    plt.xlabel('Step')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.title('Training Loss (All Steps)')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True, alpha=0.3)\n",
-    "    \n",
-    "    # Plot smoothed version (every 100 steps for cleaner view)\n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    if len(losses) >= 100:\n",
-    "        # Sample every 100th step for cleaner visualization\n",
-    "        sampled_steps = steps[::100]\n",
-    "        sampled_losses = losses[::100]\n",
-    "        plt.plot(sampled_steps, sampled_losses, marker='o', markersize=4, linewidth=2, color='green', label='Loss (every 100 steps)')\n",
-    "    else:\n",
-    "        plt.plot(steps, losses, marker='o', markersize=4, linewidth=2, color='green', label='Loss')\n",
-    "    \n",
-    "    plt.xlabel('Step')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.title('Training Loss (Sampled)')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True, alpha=0.3)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    # Print summary statistics\n",
-    "    print(f\"\\nLoss Statistics:\")\n",
-    "    print(f\"  Initial loss: {losses[0]:.4f}\")\n",
-    "    print(f\"  Final loss: {losses[-1]:.4f}\")\n",
-    "    print(f\"  Min loss: {min(losses):.4f}\")\n",
-    "    print(f\"  Max loss: {max(losses):.4f}\")\n",
-    "    print(f\"  Average loss: {np.mean(losses):.4f}\")\n",
-    "\n",
-    "            \n"
+    "# All common functions are imported from cifar_common\n"
    ]
   },
   {
@@ -314,7 +143,7 @@
     "        m.reset_running_stats()\n",
     "\n",
     "model.train()  # Ensure model is in training mode\n",
-    "train_loader, test_loader = get_data(100)\n",
+    "train_loader, test_loader = get_data(100, num_workers=8, prefetch_factor=8)\n",
     "criterion = nn.CrossEntropyLoss(label_smoothing=0.05)\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=0.1,  momentum=0.9, weight_decay=4e-4)\n",
     "scheduler = CosineAnnealingLR(optimizer, T_max=num_epochs, eta_min=1e-4)\n",
@@ -387,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(model, test_loader)\n",
+    "evaluate(model, test_loader, per_class_accuracy=True)\n",
     "\n",
     "# print optimizer current lr\n",
     "print(f\"Current learning rate: {optimizer.param_groups[0]['lr']}\")\n",
