Refactor normalization in data loading functions by defining mean and std values as constants in cifar_common.py. Remove redundant code from cifar_10_res_net_pre_activation.ipynb.

--- a/cifar_10_dense_net.ipynb
+++ b/cifar_10_dense_net.ipynb
@@ -29,6 +29,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e1b270d8-21de-4bd4-9660-ef446bf692b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All common functions are imported from cifar_common\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "94a39d34-1234-4230-8c25-bed4cd57d602",
    "metadata": {},
    "outputs": [],
