Add bn and relu before adaptive pool

--- a/cifar_10_dense_net.ipynb
+++ b/cifar_10_dense_net.ipynb
@@ -71,18 +71,15 @@
     "    def forward(self, x):\n",
     "        out = self.bn1(x)\n",
     "        out = self.relu(out)\n",
-    "        identity = out\n",
     "\n",
-    "        out = self.conv1(x)\n",
+    "        out = self.conv1(out)\n",
     "        out = self.bn2(out)\n",
     "        out = self.relu(out)\n",
     "        out = self.conv2(out)\n",
     "        \n",
-    "        out += self.shortcut(identity)\n",
+    "        out += self.shortcut(x)\n",
     "        return out\n",
     "        \n",
-    "        \n",
-    "\n",
     "class ResNet(nn.Module):\n",
     "    def __init__(self, num_classes):\n",
     "        super().__init__()\n",
@@ -108,6 +105,9 @@
     "            PreActResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1)\n",
     "        )\n",
     "        \n",
+    "        self.bn = nn.BatchNorm2d(init_conv_channels * 4)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "        \n",
     "        # B, 64, 16, 16 -> B, 128, 8, 8  \n",
     "\n",
     "        self.gap = nn.AdaptiveAvgPool2d(1)\n",
@@ -118,6 +118,9 @@
     "        out = self.layer1(x)\n",
     "        out = self.layer2(out)\n",
     "        out = self.layer3(out)\n",
+    "\n",
+    "        out = self.bn(out)\n",
+    "        out = self.relu(out)\n",
     "        out = self.gap(out)\n",
     "        out = out.reshape(out.size(0), -1)\n",
     "        out = self.fc(out)\n",
