--- a/cifar_10_res_net_pre_activation.ipynb
+++ b/cifar_10_res_net_pre_activation.ipynb
@@ -98,6 +98,9 @@
     "            PreActResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1)\n",
     "        )\n",
     "        \n",
+    "        self.bn = nn.BatchNorm2d(init_conv_channels * 4)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "        \n",
     "        # B, 64, 16, 16 -> B, 128, 8, 8  \n",
     "\n",
     "        self.gap = nn.AdaptiveAvgPool2d(1)\n",
@@ -108,6 +111,8 @@
     "        out = self.layer1(x)\n",
     "        out = self.layer2(out)\n",
     "        out = self.layer3(out)\n",
+    "        out = self.bn(out)\n",
+    "        out = self.relu(out)\n",
     "        out = self.gap(out)\n",
     "        out = out.reshape(out.size(0), -1)\n",
     "        out = self.fc(out)\n",
