--- a/cifar_10_res_net_pre_activation.ipynb
+++ b/cifar_10_res_net_pre_activation.ipynb
@@ -61,14 +61,13 @@
     "    def forward(self, x):\n",
     "        out = self.bn1(x)\n",
     "        out = self.relu(out)\n",
-    "        identity = out\n",
     "\n",
-    "        out = self.conv1(x)\n",
+    "        out = self.conv1(out)\n",
     "        out = self.bn2(out)\n",
     "        out = self.relu(out)\n",
     "        out = self.conv2(out)\n",
     "        \n",
-    "        out += self.shortcut(identity)\n",
+    "        out += self.shortcut(x)\n",
     "        return out\n",
     "        \n",
     "        \n",
