--- a/cifar_10_res_net_pre_activation.ipynb
+++ b/cifar_10_res_net_pre_activation.ipynb
@@ -18,7 +18,6 @@
     "from cifar_common import (\n",
     "    DEVICE,\n",
     "    get_data,\n",
-    "    train_step,\n",
     "    train,\n",
     "    evaluate,\n",
     "    check_model_outputs,\n",
@@ -125,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ResNet(10)\n",
+    "num_classes = 10\n",
+    "model = ResNet(num_classes)\n",
     "model = model.to(DEVICE)\n",
     "num_epochs = 4\n",
     "tracker = UpdateRatioTracker(log_every=100)\n",
@@ -175,6 +175,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1d74facd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate(model, test_loader, per_class_accuracy=True, num_classes=num_classes)\n",
+    "\n",
+    "# print optimizer current lr\n",
+    "print(f\"Current learning rate: {optimizer.param_groups[0]['lr']}\")\n",
+    "\n",
+    "losses[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05aa5a12",
    "metadata": {},
    "outputs": [],
@@ -199,21 +214,6 @@
     "\n",
     "\n",
     "plot_update_ratios(tracker, list(tracker.history.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d74facd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate(model, test_loader, per_class_accuracy=True)\n",
-    "\n",
-    "# print optimizer current lr\n",
-    "print(f\"Current learning rate: {optimizer.param_groups[0]['lr']}\")\n",
-    "\n",
-    "losses[0:10]"
    ]
   },
   {
